--- a/day_1/deneme17.html
+++ b/day_1/deneme17.html
@@ -8,7 +8,7 @@
         </p>
 
         <p>
-            çoğu tarayıcı silinmiş yazının üstünü, eklenmiş yazının altını çizer.
+            çoğu tarayıcı silinmiş yazının üstünü, eklenmiş yazının altını çizer. a
         </p>
 
         <p>
