--- a/day_1/deneme.html
+++ b/day_1/deneme.html
@@ -1,8 +1,16 @@
 <html>
-    <head>
-        <title>ony</title>
-    </head>
     <body>
-        Bu benim ilk sayfam   <b>Bu metin koyu</b>
-        </body>
+        <code>bilgisayar kodu</code>
+        <br/>
+        <kod>klavye girişi</kod>
+        <br/>
+        <tt>teletip metini</tt>
+        <br/>
+        <samp>örnek metin</samp>
+        <var>bilgisayar değişkeni</var>
+
+        <p>
+            <b>not:</b>bu etiketler sık sık programlama kodlarını göstermek için kullanılır.
+        </p>
+    </body>
 </html>
