--- a/day_1/yuceladdress.html
+++ b/day_1/yuceladdress.html
@@ -2,7 +2,7 @@
     <body>
         <address>
             yücel aydın<br/>
-            ok meydanı, no:28<br/>
+            Okmeydanı, No:28<br/>
             istanbul<br/>
             Türkiye
         </address>
