--- a/day_2/resim_linkleme.html
+++ b/day_2/resim_linkleme.html
@@ -2,7 +2,7 @@
     <body>
         <p>
             bir resmi ayrıca link olarak kullanabilirsiniz:
-            <a href="http://www.olay53.com/">
+            <a href="http://dogukaradenizcay.com/">
                 <img border="0" src="buttonnext.gif" width="65" height="38"
             </a>
         </p>
