--- a/day_2/resim_linkleme.html
+++ b/day_2/resim_linkleme.html
@@ -3,7 +3,7 @@
         <p>
             bir resmi ayrıca link olarak kullanabilirsiniz:
             <a href="http://dogukaradenizcay.com/">
-                <img border="0" src="imege/buttonnext.png" width="65" height="65"
+                <img border="0" src="resim/buttonnext.png" width="65" height="65"
             </a>
         </p>
     </body>
