--- a/day_3/form_submit.html
+++ b/day_3/form_submit.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form name="input" action="ornek/html_form_action.php"
+        <form name="input" action="form1.html"
         method="get" target="_blank">
         kullanıcı adı:
         <input type="text" name="kullanıcı">
