--- a/day_1/bdo.html
+++ b/day_1/bdo.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h1 align="center">bdo</h1>
 
         <p>
             eğer tarayıcınız çift yönlü yazmayı  (bi-directional override (bdo)) destekliyorsa, sonraki satırı sağdan sola doğru göreceksiniz. (right to left(rt1))
