--- a/day_1/bgcolor1.html
+++ b/day_1/bgcolor1.html
@@ -1,5 +1,6 @@
 <html>
-    <body bgcolor="green">
+    <body bgcolor="orange">
+        <h1 align="center">bgcolor</h1>
         <h2>Bak: Renkli arkaplan!</h2>
     </body>
 </html>
