--- a/day_1/bgcolor2.html
+++ b/day_1/bgcolor2.html
@@ -1,5 +1,5 @@
 <html>
     <body bgcolor="yellow">
-        <h2>Bak: Renkli arkaplan!</h2>
+        <h2 align="center">bak renkli arkaplan2</h2>
     </body>
 </html>
