--- a/day_1/deneme.html
+++ b/day_1/deneme.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h1 align="center">deneme</h1>
         <code>bilgisayar kodu</code>
         <br/>
         <kod>klavye girişi</kod>
