--- a/day_1/deneme_aciklama.html
+++ b/day_1/deneme_aciklama.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h1 align="center">deneme_aciklama</h1>
 
         uzun bir açıklama:
         <blockquote>
