--- a/day_1/ilk_sayfa.html
+++ b/day_1/ilk_sayfa.html
@@ -2,7 +2,7 @@
     <head>
         <title>ony</title>
     </head>
-    <body>
+    <body bgcolor="orange">
         Bu benim ilk sayfam   <b>Bu metin koyu</b>
-        </body>
+    </body>
 </html>
