--- a/day_1/kalin_baslik.html
+++ b/day_1/kalin_baslik.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <h1> bu bir başlık. </h1>
         <h2> bu bir başlık. </h2>
         <h3> bu bir başlık. </h3>
