--- a/day_1/kucuk_ipucu.html
+++ b/day_1/kucuk_ipucu.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <abbr title="birleşmiş milletler">BM</abbr>
         <acronym title="world wide web">WWW</acronym>
 
