--- a/day_1/paragraf.html
+++ b/day_1/paragraf.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <p> Bu bir paragraf.</p>
         <p> Bu bir paragraf. </p>
         <p> Bu bir paragraf. </p>
