--- a/day_1/paragraf2.html
+++ b/day_1/paragraf2.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <p> bu bir paragraf. </p>
         <p> bu da başka bir paragraf. </p>
     </body>
