--- a/day_1/satir.html
+++ b/day_1/satir.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
 
         <p>
             bir paragrafta <br/>satırları kesmek için<br/>br etiketini<br/>kullanın.
