--- a/day_1/onbicimlendirme.html
+++ b/day_1/onbicimlendirme.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <pre>
             bu bir önbiçimlendirilmeli metindir.
             hem                  boşlukları
