--- a/day_2/baglanti_linkleri.html
+++ b/day_2/baglanti_linkleri.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h2 align="center">baglanti_linkleri</h2>
 
         <p>
             <a href="sonsayfa.htm">
