--- a/day_2/deneme_yenisekme.html
+++ b/day_2/deneme_yenisekme.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <a href="http://dogukaradenizcay.com/"
         target="_blank">Taze Mayıs Çayı</a>
     </body>
