--- a/day_2/ozel_karakterler.html
+++ b/day_2/ozel_karakterler.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h2 align="center">ozel_karakterler</h2>
 
         <p>özel karakterler</p>
 
