--- a/day_2/resim_linkleme.html
+++ b/day_2/resim_linkleme.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
+    <body bgcolor="orange">
+        <h2 align="center">resim_linkleme</h2>
         <p>
             bir resmi ayrıca link olarak kullanabilirsiniz:
             <a href="http://dogukaradenizcay.com/">
