--- a/day_3/form_buton.html
+++ b/day_3/form_buton.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <form>
             <input type="radio" name="cinsiyet" value="errrrrrkek"> errrrrrkek
             <input type="radio" name="cinsiyet" value="bayan"> bayan
