--- a/day_3/form_checkboxes.html
+++ b/day_3/form_checkboxes.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <form>
             bir bisikletim var:
             <input type="checkbox" name="taşıt" value="bisiklet">
