--- a/day_3/form_submit.html
+++ b/day_3/form_submit.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <form name="input" action="form1.html"
         method="get" target="_blank">
         kullanıcı adı:
