--- a/day_3/tablo_boshucre.html
+++ b/day_3/tablo_boshucre.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <table border="5">
             <tr>
                 <td>satır 1, hücre 1</td>
