--- a/day_3/tablo_kenarliklari.html
+++ b/day_3/tablo_kenarliklari.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body bgcolor="orange">
         <h4>normal kenarlık ile:</h4>
         <table border="1">
             <tr>
