--- a/day_4/resimler.html
+++ b/day_4/resimler.html
@@ -4,13 +4,13 @@
         
         <p>
             bir resim:
-            <img src="deneme.jpg"
+            <img src="resim/deneme.jpg"
             width="144" height="50">
         </p>
 
         <p>
             hareketli bir resim:
-            <img src="200.gif"
+            <img src="resim/200.gif"
             width="48" height="48">
         </p>
 
