--- a/day_4/resimler.html
+++ b/day_4/resimler.html
@@ -1,6 +1,6 @@
 <html>
     <body bgcolor="orange">
-        <h1 align="center">resimler</h1>
+        <h1 align="center">resim_ekleme</h1>
         
         <p>
             bir resim:
